fix hero spacing

--- a/assets/css/templatemo-liberty-market.css
+++ b/assets/css/templatemo-liberty-market.css
@@ -732,7 +732,7 @@ Banner Style
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  padding-top: 290px;
+  padding-top: 230px;
   padding-bottom: 240px;
   background-color: #2a2a2a;
 }
